--- a/ZY.WEIKE.UI/Views/User/Index.cshtml
+++ b/ZY.WEIKE.UI/Views/User/Index.cshtml
@@ -67,7 +67,7 @@
 
     <section class="am-panel am-panel-default">
         <div id="tocenter" class="am-panel-bd" style="background-color:#ddd">
-            <img width="64px" src="~/Users/@Model.UserImagePath" />
+            <img width="64px" src="~/Users/UserImg/@Model.UserImagePath" />
             <span>@Model.UserName</span>
             <i class="am-icon am-icon-chevron-right"></i>
         </div>
