--- a/ZY.WEIKE.UI/Views/User/PersonCenter.cshtml
+++ b/ZY.WEIKE.UI/Views/User/PersonCenter.cshtml
@@ -117,7 +117,7 @@
     </header>
     <div id="header" class="am-panel am-panel-default">
         <div class="am-panel-bd">
-            <img class="am-center" id="img_userimg" src="~/Users/@Model.UserImagePath" />
+            <img class="am-center" id="img_userimg" src="~/Users/UserImg/@Model.UserImagePath" />
             <div>Hi，@Model.UserName</div>
             <div><small>@Model.Email</small></div>
         </div>
