--- a/ZY.WEIKE.UI/Views/User/Image.cshtml
+++ b/ZY.WEIKE.UI/Views/User/Image.cshtml
@@ -19,7 +19,7 @@
 }
 <header data-am-widget="header" class="am-header am-header-default" style="margin-bottom: 1px;">
     <div class="am-header-left am-header-nav">
-        <a href="" class="">
+        <a href="/User/PersonCenter" class="">
             <i class="am-header-icon am-icon-chevron-circle-left"></i>
             <a>头像</a>
         </a>
@@ -30,7 +30,7 @@
                 <button class="am-btn am-btn-primary am-dropdown-toggle">&equiv;</button>
                     <ul class="am-dropdown-content" style="">
                         <li><a id="saveImage">保存</a></li>
-                        <li><a>返回</a></li>
+                        <li><a href="~/User/PersonCenter">返回</a></li>
                     </ul>
             </div>
         </div>
