--- a/ZY.WEIKE.UI/Views/User/PersonCenter.cshtml
+++ b/ZY.WEIKE.UI/Views/User/PersonCenter.cshtml
@@ -94,7 +94,7 @@
 
         #userinfo .am-panel-bd div > * {
             pointer-events: none;
-        }
+        }/*阻止事件往下传*/
         #img_userimg #SWFUpload_0 {
             display:none;
         }
