--- a/ZY.WEIKE.UI/Areas/TeacherArea/Views/Weike/Index.cshtml
+++ b/ZY.WEIKE.UI/Areas/TeacherArea/Views/Weike/Index.cshtml
@@ -13,7 +13,7 @@
     </style>
 }
 @section nav{
-    <a href="/Teacher/Weike/">微课管理</a>
+    微课管理
 }
 <div class="am-g">
     <div class="am-u-sm-12 am-u-md-3">
