--- a/ZY.WEIKE.UI/Views/Category/Index.cshtml
+++ b/ZY.WEIKE.UI/Views/Category/Index.cshtml
@@ -72,7 +72,7 @@
             </a>
         </div>
     </header>
-    @foreach (var item in (IEnumerable<ZY.WEIKE.MODAL.ColleageModel>)ViewData["initdata"])
+    @foreach (var item in (IEnumerable<ZY.WEIKE.MODEL.ColleageModel>)ViewData["initdata"])
     {
         
     <section data-id="@item.Id" id="colleage_@item.Id" class="am-panel am-panel-default">
