--- a/ZY.WEIKE.UI/Views/Play/Index.cshtml
+++ b/ZY.WEIKE.UI/Views/Play/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     Layout = null;
 }
-@using ZY.WEIKE.MODAL;
-@model ZY.WEIKE.MODAL.WeiKeModel
+@using ZY.WEIKE.MODEL;
+@model ZY.WEIKE.MODEL.WeiKeModel
 <!DOCTYPE html>
 
 <html>
