--- a/ZY.WEIKE.UI/Views/User/Login.cshtml
+++ b/ZY.WEIKE.UI/Views/User/Login.cshtml
@@ -65,21 +65,21 @@
             <p>© 2014 AllMobilize, Inc. Licensed under MIT license.</p>
         </div>
     </div>
-    <div class="am-modal am-modal-alert" tabindex="-1" id="incorrect">
-        <div class="am-modal-dialog">
-            <div class="am-modal-hd">提示</div>
-            <div class="am-modal-bd">
+    <div class="am-MODEL am-MODEL-alert" tabindex="-1" id="incorrect">
+        <div class="am-MODEL-dialog">
+            <div class="am-MODEL-hd">提示</div>
+            <div class="am-MODEL-bd">
                 用户名或密码错误！
             </div>
-            <div class="am-modal-footer">
-                <span class="am-modal-btn">确定</span>
+            <div class="am-MODEL-footer">
+                <span class="am-MODEL-btn">确定</span>
             </div>
         </div>
     </div>
-    <div class="am-modal am-modal-loading am-modal-no-btn" tabindex="-1" id="my-modal-loading">
-        <div class="am-modal-dialog">
-            <div class="am-modal-hd">登录中...</div>
-            <div class="am-modal-bd">
+    <div class="am-MODEL am-MODEL-loading am-MODEL-no-btn" tabindex="-1" id="my-MODEL-loading">
+        <div class="am-MODEL-dialog">
+            <div class="am-MODEL-hd">登录中...</div>
+            <div class="am-MODEL-bd">
                 <span class="am-icon-spinner am-icon-spin"></span>
             </div>
         </div>
@@ -92,11 +92,11 @@
     var loginform = document.getElementById('loginform');
 
     loginform.onsubmit = function () {
-        $('#my-modal-loading').modal('open');
+        $('#my-MODEL-loading').MODEL('open');
         $.post('/User/UserLogin/', $('#loginform').serializeArray(), function (result) {
-            $('#my-modal-loading').modal('close');
+            $('#my-MODEL-loading').MODEL('close');
             if (result.result == 'failed') {
-                $('#incorrect').modal('open');
+                $('#incorrect').MODEL('open');
             } else if (result.result == 'sucessed') {
                 window.location.href = '/Home';
             }
