--- a/ZY.WEIKE.UI/Areas/TeacherArea/Views/Shared/_LayoutPage1.cshtml
+++ b/ZY.WEIKE.UI/Areas/TeacherArea/Views/Shared/_LayoutPage1.cshtml
@@ -62,7 +62,7 @@
                     <li><a href="/Teacher/Home" id="a-home"><span class="am-icon-home"></span> 首页</a></li>
                     <li><a href="#" id="a-user"><span class="am-icon-user"></span> 选课用户</a></li>
                     <li><a href="/Teacher/Weike" id="a-weike"><span class="am-icon-pencil-square-o"></span> 微课管理</a></li>
-                    <li><a href="#" id="a-category"><span class="am-icon-pencil-square-o"></span> 增加类别</a></li>
+                    <li><a href="/Teacher/Weike/AddType" id="a-category"><span class="am-icon-pencil-square-o"></span> 增加类别</a></li>
                     <li><a href="#" id="a-category"><span class="am-icon-pencil-square-o"></span> 查看留言</a></li>
                 </ul>
                 <div class="am-panel am-panel-default admin-sidebar-panel">
