--- a/ZY.WEIKE.UI/Views/Home/Index.cshtml
+++ b/ZY.WEIKE.UI/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 <!-- Set render engine for 360 browser -->
 <meta name="renderer" content="webkit" />
 
-<!-- No Baidu Siteapp-->
+<!-- No Baidu Si3333teapp-->
 <meta http-equiv="Cache-Control" content="no-siteapp" />
 
 <link rel="icon" type="image/png" href="/Content/assets/i/favicon.png" />
